[tool.poetry]
name = "litestar-htmx-login"
version = "0.1.0"
description = ""
authors = ["Viet Than"]
readme = "README.md"
packages = [{include = "litestar_htmx_login"}]

[tool.poetry.dependencies]
python = "^3.10"
litestar = "^2.0.1"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
attrs = "^23.1.0"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
